examples/reference/dialect_parser_fixit_error.err
Assembly failed:
4: ERROR [asm402]
    4 |         ld a,
        ^
help: LD appears to use Z80 dialect under 8085 CPU mode; replace with Intel8080-family form 'MVI', or switch CPU/dialect
suggestion: replace 4:9-11 with "MVI"
ERROR: No instruction found for LD
